# raylib-template

./: CMakeLists.txt
example/: CMakeLists.txt  main.c
examplelib/: CMakeLists.txt  lib.c  lib.h
